[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/MagmaFist.gd" type="Script" id=1]
[ext_resource path="res://Sprites/MagmaFist.png" type="Texture" id=2]
[ext_resource path="res://Sprites/conePreview.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 8.0

[node name="MagmaFist" type="Sprite"]
texture = ExtResource( 2 )
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="EffectArea" type="Area2D" parent="."]
monitorable = false

[node name="EffectShape" type="CollisionPolygon2D" parent="EffectArea"]
build_mode = 1
polygon = PoolVector2Array( 0, 0, -20, -20, -24, -14, -26, -5, -23, 7, -20, 14, -17, 17 )
disabled = true

[node name="ConePreview" type="Sprite" parent="."]
visible = false
rotation = -2.35619
texture = ExtResource( 3 )
centered = false
offset = Vector2( 0, -48 )

[connection signal="body_entered" from="Area2D" to="." method="bodyCollided"]
